--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,10 +55,10 @@
       </div>
       <div class="square-menu">
         <h2>follow me</h2>
-        <ul>
-          <li><a href="http://twitter.com/myabc">Twitter</a></li>
-          <li><a href="http://feeds.alexbcoles.com/alexbcoles">RSS</a></li>
-          <li><script type="text/javascript">
+        <p>
+          <a href="http://twitter.com/myabc">Twitter</a>
+          <a href="http://feeds.alexbcoles.com/alexbcoles">RSS</a>
+          <script type="text/javascript">
           //<![CDATA[
           function hiveware_enkoder(){var i,j,x,y,x=
           "x=\"783d227b402532357d4227253232452a373a3f403b6c3a3a3b3e3b3c3b3e3e3e3b3e3b" +
@@ -88,22 +88,26 @@
           ";y='';for(i=0;i<x.length;i+=2){y+=unescape('%'+x.substr(i,2));}y";
           while(x=eval(x));}hiveware_enkoder();  
           //]]>
-          </script></li>
-          <li><a href="http://github.com/myabc">GitHub</a></li>
-          <li><a href="http://delicious.com/alexbcoles">Delicious</a></li>
-          <li><a href="http://www.linkedin.com/in/alexandercoles">LinkedIn</a></li>
-          <li><a href="http://www.workingwithrails.com/person/12021-alex-coles">Working with Rails</a></li>
-          <li><a href="http://www.ohloh.net/accounts/myabc">Ohloh</a></li>
-          <li><a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a></li>
-        </ul>
+          </script>
+          <a href="http://github.com/myabc">GitHub</a>
+          <a href="http://delicious.com/alexbcoles">Delicious</a>
+          <a href="http://www.linkedin.com/in/alexandercoles">LinkedIn</a>
+          <a href="http://www.ohloh.net/accounts/myabc">Ohloh</a>
+          <a href="http://www.workingwithrails.com/person/12021-alex-coles">Working with Rails</a>
+          <a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a>
+        </p>
       </div>
       <div class="square-menu">
-        <h2>about me</h2>
-        <p>Alex B Coles is a web developer</p>
+        <h2>categories</h2>
+        <p>
+          <a href="http://github.com/myabc">Code</a>
+          </br>
+          <a href="http://delicious.com/alexbcoles">Me</a>
+        </p>
       </div>
       <div class="square-menu">
-        <h2>follow me</h2>
-        <p>Alex B Coles is a web developer</p>
+        <h2>search</h2>
+        <p>[Search Box]</p>
       </div>
     </section>
   </div>
