--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -18,15 +18,12 @@ section.menu
 section.content article.excerpt
   float: left
   +width(7)
-
-  //:padding-left 2em
   p, time
     :padding-left 2em
     :padding-right 2em
   h2
     :padding-right 2em
     :padding-top 1em
-
   &:nth-child(2n+1)
     clear: both
 
@@ -40,6 +37,8 @@ section.content article.excerpt
 
 .square-menu
   :margin-top 2em
+  :padding-left .5em
+  :padding-right .5em
 
 footer
   clear: both
