--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -33,3 +33,9 @@ footer#colophon p
   p
     font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
     font-size:    0.825em
+    color:        white
+    a, a:hover, a:visited
+      font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
+      font-size:    1em
+      color:        white
+      text-decoration: none
