--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -46,7 +46,8 @@ time { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"
 footer#colophon p { font-size: 0.825em; }
 
 .square-menu h2 { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; }
-.square-menu p { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 0.825em; }
+.square-menu p { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 0.825em; color: white; }
+.square-menu p a, .square-menu p a:hover, .square-menu p a:visited { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; color: white; text-decoration: none; }
 
 header#site-header, footer#colophon { width: 70.5em; margin: 0 auto; }
 
@@ -65,7 +66,7 @@ section.content article.excerpt:nth-child(2n+1) { clear: both; }
 
 #content-header { float: left; width: 7.5em; }
 
-.square-menu { margin-top: 2em; }
+.square-menu { margin-top: 2em; padding-left: 0.5em; padding-right: 0.5em; }
 
 footer { clear: both; }
 
