typography for header and footer

--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -39,3 +39,21 @@ footer#colophon p
       font-size:    1em
       color:        white
       text-decoration: none
+
+header
+  p
+    font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
+    font-size:    1em
+    text-align: right
+  h1
+    line-height:  ($line-height / $em) * 1
+    padding-top: 1em
+
+footer
+  padding-top: 2em
+
+.paginator
+  text-align: right
+  h3
+    a
+      text-decoration: none
