--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -43,7 +43,7 @@ $cols16: (16 * ($column + $gutter) - $gutter) / $em
 
 
 $crimson: #DC143C
-
+$gray: #334455
 
 // $font_color: #000
 // $link_color: #631F66
