--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -23,35 +23,34 @@ time
   font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
   font-size:    0.825em
 
-footer#colophon p
-  font-size:    0.825em
-
 .square-menu
   h2
     font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
     font-size:    1em
+    line-height:  ($line-height / $em) * 1
   p
     font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
     font-size:    0.825em
-    color:        white
     a, a:hover, a:visited
       font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
       font-size:    1em
-      color:        white
       text-decoration: none
 
 header
   p
     font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
     font-size:    1em
-    text-align: right
   h1
     line-height:  ($line-height / $em) * 1
-    padding-top: 1em
 
-footer
-  padding-top: 2em
-
+.footer-right
+  p, a
+    font-size: 0.75em	
+    line-height:  ($line-height / $em) * 1
+    a
+      font-size: 1em	
+      line-height:  ($line-height / $em) * 1
+	
 .paginator
   text-align: right
   h3
