--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,5 @@
 <footer id="colophon">
   <p>
-    © Copyright {{ site.time | date: "%Y" }}, Alex B Coles.<br/>
-    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.<br/>
-
-    Site designed and developed using
-    <a href="http://github.com/mojombo/jekyll">Jekyll</a>,
-    <a href="http://www.blueprintcss.org/">Blueprint</a> &amp;
-    <a href="http://wiki.github.com/chriseppstein/compass">Compass</a>.
-
-    Fonts include <a href="http://www.ms-studio.com/FontSales/anonymouspro.html">AnonymousPro</a>
-    by <a href="http://www.ms-studio.com">Mark Gimonson Studio</a>.
-
-    Hosting by <a href="http://github.com">GitHub</a>.
-    Comments powered by <a href="http://disqus.com">Disqus</a>.<br/>
-    <br/>
+    &nbsp;
   </p>
-  <div id="image-right">
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="/images/cc70.png" /></a>
-  </div>
 </footer>
