--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,11 @@
     &nbsp;
   </div>
   <div id="content-header">
-    <h1>myabc</h1>
+    <h1>
+      <a href="/">
+        myabc
+      </a>
+    </h1>
     <p>various musings</p>
   </div>
   
