--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -43,21 +43,23 @@ h3, h4, h5, h6 { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-co
 
 time { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 0.825em; }
 
-footer#colophon p { font-size: 0.825em; }
+.square-menu h2 { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; line-height: 1.5em; }
+.square-menu p { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 0.825em; }
+.square-menu p a, .square-menu p a:hover, .square-menu p a:visited { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; text-decoration: none; }
 
-.square-menu h2 { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; }
-.square-menu p { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 0.825em; color: white; }
-.square-menu p a, .square-menu p a:hover, .square-menu p a:visited { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; color: white; text-decoration: none; }
+header p { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; }
+header h1 { line-height: 1.5em; }
 
-header p { font-family: "ff-meta-web-pro-condensed-1", "ff-meta-web-pro-condensed-2"; font-size: 1em; text-align: right; }
-header h1 { line-height: 1.5em; padding-top: 1em; }
-
-footer { padding-top: 2em; }
+.footer-right p, .footer-right a { font-size: 0.75em; line-height: 1.5em; }
+.footer-right p a, .footer-right a a { font-size: 1em; line-height: 1.5em; }
 
 .paginator { text-align: right; }
 .paginator h3 a { text-decoration: none; }
 
-header#site-header, footer#colophon { width: 70.5em; margin: 0 auto; }
+header#site-header { width: 70.5em; margin: 0 auto; }
+
+header p { text-align: right; }
+header h1 { padding-top: 1em; }
 
 .content-plus-menu { width: 70.5em; margin: 0 auto; }
 
@@ -65,9 +67,9 @@ section.content { float: left; width: 61.5em; }
 
 section.menu { float: left; width: 7.5em; }
 
-section.content article.excerpt { float: left; width: 30em; }
-section.content article.excerpt p, section.content article.excerpt time { padding-left: 2em; padding-right: 2em; }
-section.content article.excerpt h2 { padding-right: 2em; padding-top: 1em; }
+section.content article.excerpt { float: left; overflow: hidden; width: 30em; }
+section.content article.excerpt p, section.content article.excerpt time { padding-left: 32px; padding-right: 32px; }
+section.content article.excerpt h2 { padding-right: 32px; padding-top: 1em; }
 section.content article.excerpt:nth-child(2n+1) { clear: both; }
 
 #space-header { float: left; width: 61.5em; }
@@ -75,8 +77,13 @@ section.content article.excerpt:nth-child(2n+1) { clear: both; }
 #content-header { float: left; width: 7.5em; }
 
 .square-menu { margin-top: 2em; padding-left: 0.5em; padding-right: 0.5em; }
+.square-menu h2 { padding-top: 1em; padding-bottom: 0.5em; }
 
-footer { clear: both; }
+.footer-right { width: 7.5em; margin-top: 2em; padding-left: 0em; padding-right: 1em; }
+
+.paginator { width: 57em; float: left; margin-top: 2em; padding: 2em; }
+
+footer#colophon { clear: both; width: 70.5em; padding-top: 2em; }
 
 /*  An easy way to zoom your entire layout in or out (as long as it's set in ems). Just change the media queries to activate them. Assuming your base font-size is 16: - the first one zooms out by a factor of (16-2)/16 = 0.875 - the second one zooms in by a factor of (16+2)/16 = 1.125 */
 a:link { color: black; }
@@ -86,7 +93,7 @@ a:visited { color: #666666; }
 h1, h2 { color: #dc143c; }
 h1 a:link, h1 a:visited, h2 a:link, h2 a:visited { color: inherit; text-decoration: none; }
 
-time { color: gray; border-bottom: 1px solid #dc143c; }
+time { color: #334455; border-bottom: 1px solid #dc143c; }
 
 ::selection { background: #dc143c; color: white; }
 
@@ -100,8 +107,19 @@ body { -webkit-tap-highlight-color: rgba(255, 0, 0, 0.62); }
 
 .square-menu { background: #dc143c; }
 .square-menu p, .square-menu h2 { color: white; }
+.square-menu p a, .square-menu p a:hover, .square-menu p a:visited, .square-menu h2 a, .square-menu h2 a:hover, .square-menu h2 a:visited { color: white; }
+
+.footer-right { color: #334455; }
+.footer-right p, .footer-right a, .footer-right a:visited { color: #334455; }
+.footer-right img { opacity: 0.7; filter: alpha(opacity=70); }
 
 #site-header-wrapper { background-color: #dc143c; border-bottom: 0.5em solid #333333; }
+
+header p { color: #334455; }
+
+.paginator h3 a, .paginator h3 a:visited { color: #334455; }
+
+footer#colophon p { background: #dc143c; }
 
 code { background-color: #eeeeee; border: 1px solid #cccccc; }
 
