--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,13 @@
       </div>
       <div class="square-menu">
         <h2>search</h2>
-        <p>[Search Box]</p>
+        <form action="http://www.google.com/cse" id="cse-search-box">
+          <div id="search">
+            <input type="hidden" name="cx" value="004211119241033965410:bbu9uuwp4m8" />
+            <input type="hidden" name="ie" value="UTF-8" />
+            <input type="text" id="q" name="q" size="10" />
+          </div>
+        </form>
       </div>
       <div class="footer-right">
         <p>
@@ -118,7 +124,7 @@
           <a href="http://github.com/mojombo/jekyll">Jekyll</a>,
           <a href="http://framelessgrid.com/">Frameless</a> &amp;
           <a href="http://wiki.github.com/chriseppstein/compass">Compass</a>.
-
+          Fonts by <a href="http://typekit.com">Typekit</a>.
           Hosting by <a href="http://github.com">GitHub</a>.
           Comments powered by <a href="http://disqus.com">Disqus</a>.<br/>
           <br/>
