--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -40,10 +40,9 @@ $cols16: (16 * ($column + $gutter) - $gutter) / $em
 =width($cols: 1)
   width: ($cols * ($column + $gutter) - $gutter) / $em
 
-
-
 $crimson: #DC143C
 $gray: #334455
+$lightgray: #EEEEFF
 
 // $font_color: #000
 // $link_color: #631F66
