--- a/_sass/partials/_code.sass
+++ b/_sass/partials/_code.sass
@@ -1,14 +1,13 @@
 // Non-Pygments Code Styling
 
 code
-  background-color: #eee
-  border: 1px solid #ccc
+  background-color: $lightgray
+  //border-left: 1px solid $crimson
 
 pre,
 div.highlight pre
-  background-color: #eee
-  border: 1px solid #ccc
-  +border-radius(2px)
+  background-color: $lightgray
+  border-left: 3px solid $crimson
   padding: 5px
   overflow: scroll
 
