--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -8,6 +8,9 @@ header
   h1
     padding-top:  1em
 
+h3, h4, h5, h6
+  padding-top:  1em
+
 .content-plus-menu
   +width(16)
   margin: 0 auto
@@ -33,6 +36,9 @@ section.content article.excerpt
   &:nth-child(2n+1)
     clear: both
 
+.thumbnail
+  margin-left: 64px
+
 #space-header
   float: left
   +width(14)
@@ -45,6 +51,7 @@ section.content article.excerpt
   :margin-top 2em
   :padding-left .5em
   :padding-right .5em
+  padding-bottom: 1em
   h2
     padding-top: 1em
     padding-bottom: .5em
@@ -63,8 +70,37 @@ section.content article.excerpt
 
 footer#colophon
   clear: both
-  +width(16)
+  +width(3)
   :padding-top 2em
+
+.post-content-wide
+  float: left
+  overflow: hidden
+  +width(14)
+  p, time
+    :padding-left 64px
+    :padding-right 320px
+  pre
+    :padding-left 64px
+    :margin-right 32px
+  h2
+    :padding-right 64px
+    :padding-top 1em
+  &:nth-child(2n+1)
+    clear: both
+  ul
+    :padding-left 64px
+
+.meta-title
+  h1
+    :padding-bottom 1em
+
+.post-content-disqus
+  margin-top: 3em
+  :padding-left 64px
+  +width(8)
+  float: left
+
 
 /*
  *  An easy way to zoom your entire layout in or out (as long as it's set in ems).
