--- a/_sass/partials/_typography.sass
+++ b/_sass/partials/_typography.sass
@@ -18,6 +18,10 @@ h2
 h3, h4, h5, h6
   font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
   font-size:    1em
+  line-height:  ($line-height / $em) * 2
+
+ul
+  list-style-type: square
 
 time
   font-family:  "ff-meta-web-pro-condensed-1","ff-meta-web-pro-condensed-2"
@@ -54,5 +58,6 @@ header
 .paginator
   text-align: right
   h3
+    line-height:  ($line-height / $em) * .5
     a
       text-decoration: none
