margin in .highlight in code viewer

--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -92,6 +92,9 @@ footer#colophon
     :padding-left 64px
     :padding-right 320px
 
+.highlight
+  :margin-right 32px
+
 .meta-title
   h1
     :padding-bottom 1em
