same width for code divs

--- a/_sass/partials/_layout.sass
+++ b/_sass/partials/_layout.sass
@@ -91,9 +91,14 @@ footer#colophon
   ul, ol
     :padding-left 64px
     :padding-right 320px
-
-.highlight
-  :margin-right 32px
+  .highlight
+    +width(13)
+    padding-right: 36px
+    margin-right: 0px
+    overflow: scroll
+    pre
+      :padding-left 64px
+      :margin-right 32px
 
 .meta-title
   h1
