--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
           </script>
           <a href="http://github.com/myabc">GitHub</a>
           <a href="http://delicious.com/alexbcoles">Delicious</a>
-          <a href="http://www.linkedin.com/in/alexandercoles">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/alexbcoles">LinkedIn</a>
           <a href="http://www.ohloh.net/accounts/myabc">Ohloh</a>
           <a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a>
         </p>
